--- a/HaarlemFestival/Views/Historic/Historic.cshtml
+++ b/HaarlemFestival/Views/Historic/Historic.cshtml
@@ -1,5 +1,9 @@
 ﻿@model HaarlemFestival.Model.PagePlusActivities
 
+@section AddToScripts{
+    <script src="@Url.Content("~/Scripts/ShowHideLocation.js")"></script>
+}
+
 @{
     ViewBag.Title = "Historic";
 }
@@ -66,7 +70,7 @@
     <section class="HistoricRouteInfo1">
         <p>The Grote Kerk or St.-Bavokerk is a Protestant church and former Catholic cathedral located on the central market square in the Dutch city of Haarlem.
         The Cathedral of Saint Bavo now serves as the main cathedral for the Roman Catholic Diocese of Haarlem-Amsterdam.</p>
-        <img src="/img/Historic/Info1.png" alt="The Grote Kerk or St.-Bavokerk" />
+        <img src="/img/Historic/Info1.jpg" alt="The Grote Kerk or St.-Bavokerk" />
     </section>
 
     <hr />
