CheckOutOrder Session begin

--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -74,7 +74,7 @@
             <p class="modaldatum">6</p>
             <label>Aantal</label>
             <input type="text"/>
-            <button type="button" onclick="location.href='@Url.Action("Index", "Jazz", new { id=4})'">order ticket</button>
+            <button type="button" onclick="location.href='@Url.Action("Order", "CheckOutController", new { id=4})'">order ticket</button>
         </section>
 
     </section>
