--- a/HaarlemFestival/Content/Agenda.css
+++ b/HaarlemFestival/Content/Agenda.css
@@ -10,7 +10,7 @@
     text-align: center;
     line-height: 2em;
     margin-top: 4%;
-    padding: 0px;
+    padding: 0;
     border-top-style: solid;
     border-color: #F8473E;
 }
@@ -22,7 +22,7 @@
     font-size: 1.5em;
     margin-left: 20%;
     margin-right: 20%;
-    padding: 0px;
+    padding: 0;
 }
 
 
@@ -32,31 +32,44 @@
     background-color: #EDECD8;
     color: black;
     font-size: 1em;
-    height: 20em;
+    min-height: 10em;
     width: 100%;
     text-align: center;
     line-height: 2em;
     margin-top: 2%;
-    padding: 0px;
+    padding: 0;
     border-top-style: solid;
     border-color: #F8473E;
 }
 
 .AgendaOrderList{
-    margin-left: 12em;
+    margin-top: 3em;
+    margin-left: 6em;
+    margin-right: 6em;
+    list-style-type: circle;
+    
 }
 
-.OrderHeader{
-    list-style:circle;
-    color: rebeccapurple;
-
+.OrderHeader {
+    color: firebrick;
+   
 }
 
-.AgendaOrder{
+.AgendaOrder {
+    margin-top: 3px;
     color: green;
+    
 }
 
+.orderItem {
+    border-bottom: solid;
+    border-width: thin;
+}
 /*-------------------------------------------agenda-----------------------------------------------------*/
-.Agenda{
-
+.Agenda {
+    margin-top: 2%;
+    width: 100%;
+    min-height: 3em;
+    border-top-style: solid;
+    border-color: #F8473E;
 }
