--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -631,7 +631,7 @@ p.DropMarkerGuide {
     right: 117px;
 }
 
-button.TalkingButtonBook2 {
+button.HistoricButtonBook2 {
     position: relative;
     bottom: 25px;
     left: 778px;
