--- a/HaarlemFestival/Views/Historic/Historic.cshtml
+++ b/HaarlemFestival/Views/Historic/Historic.cshtml
@@ -60,7 +60,7 @@
     <img class="HistoricImageDropMarker8" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
     <img class="HistoricImageDropMarker9" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
 
-    <button class="TalkingButtonBook2">Book now!</button>
+    <button class="HistoricButtonBook2">Book now!</button>
 
     <section class="HistoricRouteInfo">
         <p class="DropMarkerGuide">Please hover over the drop markers on the map to the left</p>
