--- a/HaarlemFestival/Views/Talking/Index.cshtml
+++ b/HaarlemFestival/Views/Talking/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@using HaarlemFestival.Model;
 @model HaarlemFestival.Model.PagePlusActivities
+@section AddToHead{
+    <link href="@Url.Content("~/Content/Talking.css")" rel="stylesheet" type="text/css" />
+}
+
 @{
     ViewBag.Title = "Index";
 }
