--- a/HaarlemFestival/Views/Agenda/Index.cshtml
+++ b/HaarlemFestival/Views/Agenda/Index.cshtml
@@ -12,7 +12,7 @@
     <h2 class="AgendaHeader">@Model.Page.Title</h2>
 
     <p class="AgendaIntroText">
-       @Model.Page.PageDescriptions
+       @Model.Page.PageDescriptions[0].DescriptionText
     </p>
 </section>
 
@@ -21,13 +21,13 @@
 <section class="AgendaOrders">
     <ul class="AgendaOrderList">
         <li class="OrderHeader">
-            <div class="orderItem col-md-1">Id</div>
+            @*<div class="orderItem col-md-1">Id</div>*@
             <div class="orderItem col-md-2">Name</div>
-            <div class="orderItem col-md-2">Event</div>
+            <div class="orderItem col-md-3">Event</div>
             <div class="orderItem col-md-1">Prijs</div>
             <div class="orderItem col-md-1">Aantal</div>
             <div class="orderItem col-md-2">Totaalprijs</div>
-            <div class="orderItem col-md-2">Tijd/Datum</div>
+            <div class="orderItem col-md-3">Tijd/Start datum</div>
 
         </li>
 
@@ -38,13 +38,13 @@
                 
 
         <li class="AgendaOrder">
-            <div class="orderItem col-md-1">@OHT.Ticket_TimeSlot_Activity_Id</div>
+            @*<div class="orderItem col-md-1">@OHT.Ticket_TimeSlot_Activity_Id</div>*@
             <div class="orderItem col-md-2">@OHT.Ticket.TimeSlot.Activity.Name</div>
-            <div class="orderItem col-md-2">@OHT.Ticket.TimeSlot.Activity.Type</div>
+            <div class="orderItem col-md-3">@OHT.Ticket.TimeSlot.Activity.Type</div>
             <div class="orderItem col-md-1">@OHT.Ticket.Price</div>
             <div class="orderItem col-md-1">@OHT.Amount</div>
             <div class="orderItem col-md-2">@OHT.TotalPrice</div>
-            <div class="orderItem col-md-2">@OHT.Ticket.TimeSlot.StartTime</div>
+            <div class="orderItem col-md-3">@OHT.Ticket.TimeSlot.StartTime.ToString("hh:mm dd/MM/yyyy")</div>
         </li>
                 }
             }
@@ -54,9 +54,18 @@
 
 </section>
 
-
+<hr />
 
 <section class="Agenda">
+    <section class="AgendaKop">
+
+    </section>
+    <section class="AgendaDagen">
+
+    </section>
+    <section class="AgendaRaster">
+        <img class="AgendaFoto" src="@Model.Page.PageDescriptions[0].ImageUrl" alt="agenda" />
+    </section>
 
 </section>
 
