--- a/HaarlemFestival/Views/Historic/Historic.cshtml
+++ b/HaarlemFestival/Views/Historic/Historic.cshtml
@@ -50,15 +50,15 @@
     <hr />
     <img class="HistoricImageRoute" src="/img/Historic/HistoricRoute.png" alt="" />
 
-    <img class="HistoricImageDropMarker1" src="/img/Historic/HistoricDropMarker.png" alt="The Grote Kerk or St.-Bavokerk" onmouseover="ShowHideLocation()"/>
-    <img class="HistoricImageDropMarker2" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
-    <img class="HistoricImageDropMarker3" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
-    <img class="HistoricImageDropMarker4" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
-    <img class="HistoricImageDropMarker5" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/> 
-    <img class="HistoricImageDropMarker6" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
-    <img class="HistoricImageDropMarker7" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
-    <img class="HistoricImageDropMarker8" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
-    <img class="HistoricImageDropMarker9" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation()"/>
+    <img class="HistoricImageDropMarker1" src="/img/Historic/HistoricDropMarker.png" alt="The Grote Kerk or St.-Bavokerk" onmouseover="ShowHideLocation1()"/>
+    <img class="HistoricImageDropMarker2" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation2()"/>
+    <img class="HistoricImageDropMarker3" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation3()"/>
+    <img class="HistoricImageDropMarker4" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation4()"/>
+    <img class="HistoricImageDropMarker5" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation5()"/> 
+    <img class="HistoricImageDropMarker6" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation6()"/>
+    <img class="HistoricImageDropMarker7" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation7()"/>
+    <img class="HistoricImageDropMarker8" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation8()"/>
+    <img class="HistoricImageDropMarker9" src="/img/Historic/HistoricDropMarker.png" alt="" onmouseover="ShowHideLocation9()"/>
 
     <button class="HistoricButtonBook2">Book now!</button>
 
