--- a/HaarlemFestival/Views/Jazz/Index.cshtml
+++ b/HaarlemFestival/Views/Jazz/Index.cshtml
@@ -53,11 +53,13 @@
                     <p id="jazz_activity_hall_@Model.Activities[i].Id" class="jazz_activiteit_hall">@Model.Page.PageDescriptions[10].Title @Model.Activities[i].Timeslots[0].Hall</p>
                     <p id="jazz_activity_price_@Model.Activities[i].Id" class="jazz_activiteit_price">@Model.Page.PageDescriptions[11].Title €@Model.Activities[i].Timeslots[0].Tickets[0].Price</p>
                     <p id="jazz_activity_time_@Model.Activities[i].Id" class="jazz_activiteit_time">@Model.Page.PageDescriptions[12].Title @Model.Activities[i].Timeslots[0].StartTime.ToString("HH:mm") - @Model.Activities[i].Timeslots[0].EndTime.ToString("HH:mm")</p>
-                    <p id="jazz_activity_datum_@Model.Activities[i].Id" style="visibility:hidden">@Model.Activities[i].Timeslots[0].StartTime.ToString("dd/MM/yyyy")</p>
                     <button id=@Model.Activities[i].Id class="jazz_page_buybtn" type="button">@Model.Page.PageDescriptions[13].Title</button>
                 </section>
             </section>
         </section>
+        <p id="jazz_activity_datum_@Model.Activities[i].Id" style="visibility:hidden">@Model.Activities[i].Timeslots[0].StartTime.ToString("dd/MM/yyyy")</p>
+        <p id="jazz_activity_ticket_price_@Model.Activities[i].Id" style="visibility:hidden">@Model.Activities[i].Timeslots[0].Tickets[0].Price</p>
+
     }
 
     <!-- The Modal -->
@@ -73,8 +75,8 @@
             <p class="modaltime">5</p>
             <p class="modaldatum">6</p>
             <label>Aantal</label>
-            <input type="text"/>
-            <button type="button" onclick="location.href='@Url.Action("Order", "CheckOutController", new { id=4})'">order ticket</button>
+            <input type="text" class="jazz_order_aantal"/>
+            @Html.ActionLink("Home", "Index", "Home", new { activityId = "a", timeslot = "b", tickettype = 0, aantal = "d", totaalprijs = "e"}, new { @class="jazz_order_btn"})
         </section>
 
     </section>
