--- a/HaarlemFestival/Views/CheckOut/CheckOut4.cshtml
+++ b/HaarlemFestival/Views/CheckOut/CheckOut4.cshtml
@@ -1,15 +1,10 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "CheckOut4";
 }
+@{
+    Layout = "_CheckOutLayout.cshtml";
+}
 
-<section class="CheckOut1">
-
-    <ul>
-        <li>Step 1<br>Login</li>
-        <li>Step 2<br>Personal info/Register</li>
-        <li>Step 3<br>Payment</li>
-        <li class="selected">Step 4<br>Tickets</li>
-    </ul>
+<section class="CheckOut4">
 
 </section>
