--- a/HaarlemFestival/Views/CheckOut/checkout1.cshtml
+++ b/HaarlemFestival/Views/CheckOut/checkout1.cshtml
@@ -1,26 +1,43 @@
-﻿@{
+﻿@model HaarlemFestival.Model.LoginModel
+@{
     ViewBag.Title = "CheckOut1";
+}
+@{
+    Layout = "_CheckOutLayout.cshtml";
 }
 
 <section class="CheckOut1">
-
-    <ul>
-        <li class="selected">Step 1<br>Login</li>
-        <li>Step 2<br>Personal info/Register</li>
-        <li>Step 3<br>Payment</li>
-        <li>Step 4<br>Tickets</li>
-    </ul>
-
     <p>By signing up you get the ability to create your own Festival program which is displayed in your agenda.</p>
 
-    <form class="CheckOutLogin">
-        <h3>Login</h3>
-        <p>Username:</p>
-        <input type="text" />
-        <p>Password:</p>
-        <input type="text" /> <br />
-        <button>Login</button>
-    </form>
+    @Html.ValidationSummary()
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        <form class="CheckOutLogin">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Login" class="btn btn-default" />
+                </div>
+            </div>
+        </form>
+    }
     <section class="middenstuk">
         <aside></aside>
 
@@ -28,12 +45,10 @@
 
         <aside></aside>
     </section>
-    
+
 
     <form class="CheckOutRegister">
         <h3>Continue without an account</h3>
         <button>Continue</button>
     </form>
-
-
 </section>
