--- a/HaarlemFestival/Views/Agenda/Index.cshtml
+++ b/HaarlemFestival/Views/Agenda/Index.cshtml
@@ -58,13 +58,24 @@
 
 <section class="Agenda">
     <section class="AgendaKop">
-
+        <h2 class="AgendaKopHeader">Agenda</h2>
     </section>
     <section class="AgendaDagen">
-
+        
+        <h2 class="Dagen">Thursday <br /> 26-07-2018</h2>
+        <h2 class="Dagen">Friday <br /> 27-07-2018</h2>
+        <h2 class="Dagen">Saturday <br /> 28-07-2018</h2>
+        <h2 class="Dagen">Sunday <br /> 29-07-2018</h2>
     </section>
     <section class="AgendaRaster">
         <img class="AgendaFoto" src="@Model.Page.PageDescriptions[0].ImageUrl" alt="agenda" />
+       
+
+        <section class="AgendaItem">
+
+        </section>
+
+
     </section>
 
 </section>
