--- a/HaarlemFestival/Content/Agenda.css
+++ b/HaarlemFestival/Content/Agenda.css
@@ -106,12 +106,21 @@
     border-radius: 0 0 0 20px;
 }
 
-.Dagen{
-    position: relative;
+.Dag1 {
+    
     text-align: center;
     font-weight: bold;
     font-size: larger;
-    margin: 2em 0 0 25%;
+    margin: 6em 0 0 25%;
+    max-width: 60%;
+}
+
+.Dagen{
+    
+    text-align: center;
+    font-weight: bold;
+    font-size: larger;
+    margin: 2.8em 0 0 25%;
     max-width: 60%;
 }
 
@@ -129,4 +138,35 @@
     width: 100%;
     height: 100%;
     border-radius: 0 0 20px 0;
+    position: relative;
+}
+
+.AgendaItem {
+    display: inline-block;
+    height: 15%;
+    width: 20%;
+    background-color: green;
+    margin: 0 0 0 0;
+    padding: 0;
+    
+    
+}
+
+.AgendaItemEvent {
+    font-size: small;
+    margin: 0;
+    padding: 0;
+}
+
+.AgendaItemAantal {
+    font-size: small;
+    margin: 0 0 1em 0;
+    padding: 0;
+}
+
+.AgendaItemName {
+    font-size: small;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
