--- a/HaarlemFestival/Views/Agenda/Index.cshtml
+++ b/HaarlemFestival/Views/Agenda/Index.cshtml
@@ -27,7 +27,7 @@
             <div class="orderItem col-md-1">Prijs</div>
             <div class="orderItem col-md-1">Aantal</div>
             <div class="orderItem col-md-2">Totaalprijs</div>
-            <div class="orderItem col-md-3">Tijd/Start datum</div>
+            <div class="orderItem col-md-3">Start tijd/datum</div>
 
         </li>
 
@@ -62,7 +62,7 @@
     </section>
     <section class="AgendaDagen">
         
-        <h2 class="Dagen">Thursday <br /> 26-07-2018</h2>
+        <h2 class="Dag1">Thursday <br /> 26-07-2018</h2>
         <h2 class="Dagen">Friday <br /> 27-07-2018</h2>
         <h2 class="Dagen">Saturday <br /> 28-07-2018</h2>
         <h2 class="Dagen">Sunday <br /> 29-07-2018</h2>
@@ -70,11 +70,50 @@
     <section class="AgendaRaster">
         <img class="AgendaFoto" src="@Model.Page.PageDescriptions[0].ImageUrl" alt="agenda" />
        
+        
+    @foreach (Order order in Model.Orders)
+    {
+        foreach (OrderHasTickets OHT in order.OrderHasTickets)
+        {
+            int aantaldagen = 0;
 
-        <section class="AgendaItem">
+            if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Thursday)
+            {
+                aantaldagen = 0;
+            }
+            else if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Friday)
+            {
+                aantaldagen = 1;
+            }
+            else if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Saturday)
+            {
+                aantaldagen = 2;
+            }
+            else if(OHT.Ticket.TimeSlot.StartTime.DayOfWeek == DayOfWeek.Sunday)
+            {
+                aantaldagen = 3;
+            }
 
-        </section>
 
+
+        <div class="AgendaItem" 
+                 style="
+                 position: relative;
+                 left: calc(2.4% + 7.33% * ( @OHT.Ticket.TimeSlot.StartTime.Hour - 10 ) + @OHT.Ticket.TimeSlot.StartTime.Minute * 1.8% ); 
+                 bottom: calc( 81% - 20% *  @aantaldagen  );
+                 z-index: @OHT.Ticket_TimeSlot_Activity_Id;
+                 ">
+
+            <h2 class="AgendaItemEvent">@OHT.Ticket.TimeSlot.Activity.Type</h2>
+
+            <h2 class="AgendaItemAantal">Tickets: @OHT.Amount</h2>
+
+            <h2 class="AgendaItemName">@OHT.Ticket.TimeSlot.Activity.Name</h2>
+
+        </div>
+
+        }
+    }
 
     </section>
 
