--- a/HaarlemFestival/Views/Dinner/Index.cshtml
+++ b/HaarlemFestival/Views/Dinner/Index.cshtml
@@ -18,9 +18,12 @@
     }
 </aside>
 
+<!--Pagedescriptions van activities begint op 2 -->
 @{int counter = 2; }
+
 @foreach (Activity activity in Model.Activities)
 {
+    
     <div class="restaurant">
         <div class="restaurant_sum_description">
             <h4>
@@ -28,23 +31,35 @@
                 <label class="lrating">
                     @for (int i = 0; i < activity.Rating; i++)
                     {
-                        <img class="rating" src="~/img/Dinner/Summary/Star_Gold-512.png" width="14" height="17" />
+                        <img class="rating" src="~/img/Dinner/Summary/Rating_full.png" width="14" height="17" />
                     }
 
                     @for (int i = activity.Rating; i < 5; i++)
                     {
-                        <img class="rating" src="~/img/Dinner/Summary/Star_Gold-5123.png" width="14" height="17" />
+                        <img class="rating" src="~/img/Dinner/Summary/Rating_empty.png" width="14" height="17" />
                     }
                 </label>
             </h4>
-            <label class="cuisine">@activity.Cuisines[1]</label>
-            <label class="cuisine">@activity.Cuisines[2]</label>
-            <label class="timeslot">@activity.Timeslots[0]</label>
-            <label class="timeslot">@activity.Timeslots[1]</label>
+            <div class="left_info">
+                <img src="~/img/Dinner/Summary/002-fork-and-knife-in-cross.svg" width="18" height="18" alt="Cuisine indicator" />
+                @foreach (Cuisine cuisine in activity.Cuisines)
+                {
+                    <label class="lcuisine">@cuisine.Name</label>
+                }
+
+            </div>
+            <div class="left_info">
+                <img src="~/img/Dinner/Summary/001-clock-circular-outline.svg" width="18" height="18" alt="Time indicator" />
+                @for (int i = 0; i < 3; i++)
+                {
+                    <label class="ltime">@activity.Timeslots[i].StartTime.ToShortTimeString() - @activity.Timeslots[i].EndTime.ToShortTimeString()</label>
+                }
+            </div>
+            
 
     </div>
         <div class="restaurant_img_box"><img class="restaurant_img" src=@Model.Page.PageDescriptions[counter].ImageUrl alt="@activity.Name" /></div>
-        <button class="btn_more_info">More info</button>
+        <button class="btn_more_info" input="button" onclick= "location.href= '@Url.Action("Restaurant", "Dinner", new { id = activity.Id})'")>More info</button>
         <button class="btn_booknow">Book now</button>
     </div>
     counter++;
