--- a/HaarlemFestival/Views/Dinner/Index.cshtml
+++ b/HaarlemFestival/Views/Dinner/Index.cshtml
@@ -7,28 +7,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@section AddToScripts{
+<script src="@Url.Content("~/Scripts/FilterOnCuisine.js")"></script>
+}
+
 <h1>@Model.Page.Name</h1>
 <aside class="filter">
     <h3>@Model.Page.PageDescriptions[0].Title</h3>
-    <input type="radio" name="foo" checked> All()
+    <input type="radio" id ="radioFilter0" name="foo" checked> All(@Model.Activities.Count())
 
+@{int index = 1; }
     @foreach (Cuisine cuisine in Model.Cuisines)
     {
-        <input type="radio" name="foo"> @cuisine.Name @Html.Raw("()");
+        <input type="radio" id ="radioFilter@(index)" name="foo"> @cuisine.Name @:(@cuisine.Activities.Count())
+        index++;
     }
 </aside>
 
 <!--Pagedescriptions van activities begint op 2 -->
 @{int counter = 2; }
+@{int id = 1; }
 
 @foreach (Activity activity in Model.Activities)
 {
     
-    <div class="restaurant">
+    <div class="restaurant" id="restaurantDivId@(id)">
         <div class="restaurant_sum_description">
             <h4>
                 @activity.Name
-                <label class="lrating">
+                <label class="lrating"> 
                     @for (int i = 0; i < activity.Rating; i++)
                     {
                         <img class="rating" src="~/img/Dinner/Summary/Rating_full.png" width="14" height="17" />
@@ -41,7 +48,7 @@
                 </label>
             </h4>
             <div class="left_info">
-                <img src="~/img/Dinner/Summary/002-fork-and-knife-in-cross.svg" width="18" height="18" alt="Cuisine indicator" />
+                <img src="~/img/Dinner/Summary/002-fork-and-knife-in-cross.svg" width="18" height="18" alt="Cuisine icon" />
                 @foreach (Cuisine cuisine in activity.Cuisines)
                 {
                     <label class="lcuisine">@cuisine.Name</label>
@@ -49,7 +56,7 @@
 
             </div>
             <div class="left_info">
-                <img src="~/img/Dinner/Summary/001-clock-circular-outline.svg" width="18" height="18" alt="Time indicator" />
+                <img src="~/img/Dinner/Summary/001-clock-circular-outline.svg" width="18" height="18" alt="Time icon" />
                 @for (int i = 0; i < 3; i++)
                 {
                     <label class="ltime">@activity.Timeslots[i].StartTime.ToShortTimeString() - @activity.Timeslots[i].EndTime.ToShortTimeString()</label>
@@ -63,6 +70,7 @@
         <button class="btn_booknow">Book now</button>
     </div>
     counter++;
+    id++;
 }
 
 <div class="dinner_description">
