--- a/HaarlemFestival/Content/Site.css
+++ b/HaarlemFestival/Content/Site.css
@@ -703,7 +703,7 @@ footer {
 .HistoricImageDropMarker10 {
     width: 25px;
     position: relative;
-    top: 0px;
+    top: 0;
     right: 46px;
 }
 
